# flx4-integration

./: .gitignore  PLAN.md  README.md  requirements.txt  setup.ps1
audio/: analyzer.py  check_loopback.py
bridge/: bridge.py
common/: mixxx_ddj_flx4.midi.xml
midi/: check_midi.py  flx4_listener.py  gen_map_from_mixxx.py  learn_map.py
presets/: midi_map.json
render/: CMakeLists.txt  embed_shader.cmake  vcpkg.json
render/src/: main.cpp  osc_receiver.h
shaders/: julia.frag
